1.1.5:	
	Clear a warning on Solaris build
	Bugfix: The subnet match mask was not set in the configuration file
1.1.4:
	Better libspf testing in configure
	Add flag equivalents to the config file
1.1.3:
	Bugfix: without SPF enabled, everything was accepted
1.1.2:
	SPF support with libspf_alt
1.1.1:
	Added a -P pidfile option to dump PID to a file
	smfi_getsymval does not set errno, so don't display strerror
	SMTP AUTH support
	Accept any e-mail address as specified in RFC 2821 from config and dump
	Add a -L flag for subnet matching (ad-hoc hack for MTA farms)
	Use setsid() to detach from the terminal
	Fix the mising units in ps output for -a and -w
	Fix typos

1.0: First stable release