@@ -1,9 +1,9 @@
-# $Id: configure.ac,v 1.83 2004/03/31 13:56:40 manu Exp $
+# $Id: configure.ac,v 1.84 2004/03/31 17:02:08 manu Exp $
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(milter-greylist, 1.1.4, manu@netbsd.org)
+AC_INIT(milter-greylist, 1.1.5, manu@netbsd.org)
 AC_CONFIG_SRCDIR([milter-greylist.c])
 AC_CONFIG_HEADER([config.h])
 
